--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
   },
   "homepage": "https://weather-adam.netlify.com",
   "dependencies": {
-    "axios": "^0.19.0"
+    "axios": "^0.19.0",
+    "bulma": "^0.8.0"
   }
 }
